<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Ui.AddNewTask">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbarAddAndEditTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/toolbardraw"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/toolBarTitleAddOrEditTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/manrope_extrabold"
            android:text="@string/addtask"
            android:textColor="#528297"
            android:textSize="24sp" />
        <ImageButton
            android:id="@+id/backButtonAddTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/button_to_go_back_to_home_page"
            android:src="@drawable/baseline_arrow_back_24"
            android:background="#e6f8f7"/>
        <ImageButton
            android:id="@+id/deleteTaskButtonEditTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/button_to_delete_todo"
            android:src="@drawable/baseline_delete_outline_24"
            android:background="#e6f8f7"/>

    </com.google.android.material.appbar.MaterialToolbar>

    <LinearLayout
        android:id="@+id/llTaskCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/white"
        android:orientation="vertical"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbarAddAndEditTask">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task_category"
            android:fontFamily="@font/manrope_extrabold"
            android:textSize="18sp"
            android:textColor="@color/darkGreen" />

        <AutoCompleteTextView
            android:id="@+id/CategoryNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_background"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:hint="@string/select_category"
            android:drawableEnd="@drawable/baseline_arrow_drop_down_24" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/llTaskName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/white"
        android:orientation="vertical"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        app:layout_constraintTop_toBottomOf="@+id/llTaskCategory">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task_name"
            android:fontFamily="@font/manrope_extrabold"
            android:textSize="18sp"
            android:textColor="@color/darkGreen" />

            <EditText
                android:id="@+id/taskNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="Ex:Biki Mondal"
                android:background="@drawable/edit_text_background"
                android:layout_marginTop="10dp"
                android:inputType="textPersonName"
                android:textColor="@color/black"
                />

    </LinearLayout>




    <LinearLayout
        android:id="@+id/llTaskTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/white"
        android:baselineAligned="false"
        android:orientation="horizontal"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        app:layout_constraintTop_toBottomOf="@+id/llDescription">

        <LinearLayout
            android:id="@+id/lltaskDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/white"
            android:orientation="vertical"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp"
            >


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:fontFamily="@font/manrope_extrabold"
                android:textSize="18sp"
                android:textColor="@color/darkGreen" />

            <TextView
                android:id="@+id/DateAndTimeEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_background"
                android:layout_marginTop="10dp"
                android:focusable="true"
                android:clickable="true"
                android:textColor="@color/black"
                app:drawableEndCompat="@drawable/baseline_calendar_month_24" />


        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"

            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reminde_me"
                android:fontFamily="@font/manrope_extrabold"
                android:textSize="18sp"
                android:textColor="@color/darkGreen" />

            <TextView
                android:id="@+id/startTimeEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_background"
                android:layout_marginTop="10dp"
                android:focusable="false"
                android:textColor="@color/black"
                app:drawableEndCompat="@drawable/schedule_24px" />
        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/llDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/white"
        android:orientation="vertical"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        app:layout_constraintTop_toBottomOf="@+id/llTaskName">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:fontFamily="@font/manrope_extrabold"
            android:textSize="18sp"
            android:textColor="@color/darkGreen" />

        <EditText
            android:id="@+id/editTextDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Description"
            android:background="@drawable/edit_text_background"
            android:layout_marginTop="10dp"
            android:inputType="textMultiLine"
            android:textColor="@color/black"
            />

    </LinearLayout>


   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       app:layout_constraintTop_toBottomOf="@+id/llTaskTime"
       android:layout_margin="20dp"
       >
       <com.google.android.material.button.MaterialButton
           android:id="@+id/repeatButton"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           app:cornerRadius="4dp"
           android:layout_weight="1"
           android:text="@string/repeat"
           android:padding="10dp"
           android:textSize="24sp"
           android:textColor="@color/white"
           android:backgroundTint="@color/darkBlue"
           app:icon="@drawable/event_repeat_24px"
           app:iconGravity="end"
           app:iconSize="34dp"
           />

       <com.google.android.material.button.MaterialButton
           android:id="@+id/selectRingToneButton"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           app:cornerRadius="4dp"
           android:text="@string/ringtone"
           android:layout_weight="1"
           android:padding="10dp"
           android:textSize="24sp"
           android:textColor="@color/white"
           android:backgroundTint="@color/darkBlue"
            android:layout_marginStart="10dp"
           app:icon="@drawable/music_note_24px"
           app:iconGravity="end"
           app:iconSize="34dp"
        />
   </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/saveOrEditButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cornerRadius="4dp"
        android:text="@string/save_task"
        android:padding="10dp"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:backgroundTint="@color/darkBlue"
        android:layout_margin="20dp"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>