<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/bottom_sheet_design"

    >

    <View
        android:id="@+id/simpleView"
        android:layout_width="100dp"
        android:layout_height="12dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/repeatTextViewBottomSheet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/repeats"
        android:textColor="@color/darkBlue"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/simpleView" />

    <TextView
        android:id="@+id/everyTextViewBottomSheet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="10dp"
        android:text="@string/every"
        android:textColor="@color/darkBlue"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/repeatTextViewBottomSheet" />

    <EditText
        android:id="@+id/editTextIntervalNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="10dp"
        android:autofillHints="true"
        android:background="@drawable/edit_text_background"
        android:gravity="center"
        android:inputType="number"
        android:hint="@string/_1"
        android:text="@string/_1"
        android:textColor="@color/darkBlue"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/everyTextViewBottomSheet"
        app:layout_constraintWidth_percent="0.14" />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textViewTextMenuBottomSheetTextInputLayot"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editTextIntervalNumber"
        app:layout_constraintTop_toBottomOf="@+id/everyTextViewBottomSheet"
        android:layout_marginEnd="12dp"
        >

        <AutoCompleteTextView
            android:id="@+id/textViewTextMenuBottomSheet"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/week"
            android:focusable="false"
            android:textColor="@color/darkBlue"
            android:textSize="18sp"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/days_of_week_chip_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTextMenuBottomSheetTextInputLayot"
        />

    <TextView
        android:id="@+id/endsTextViewBottomSheet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="10dp"
        android:text="@string/ends"
        android:textColor="@color/darkBlue"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/days_of_week_chip_group" />

        <RadioButton
            android:id="@+id/radio_button_never"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:buttonTint="@color/radio_button_bottom_sheet_color"
            android:textColor="@color/darkBlue"
            android:text="@string/never"
            android:layout_marginStart="12dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/endsTextViewBottomSheet"
            />





    <LinearLayout
        android:id="@+id/ll_radio_button_on"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="12dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintTop_toBottomOf="@+id/radio_button_never"
        >
        <RadioButton
            android:id="@+id/radio_button_on"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:buttonTint="@color/radio_button_bottom_sheet_color"
            android:textColor="@color/darkBlue"
            android:text="@string/on"
            android:layout_gravity="center"
            android:layout_weight="0.1"
            />
        <TextView
            android:id="@+id/editTextOnSelected"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:autofillHints="true"
            android:background="@drawable/edit_text_background"
            android:gravity="center"
            tools:text="September 4"
            android:textColor="@color/darkBlue"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_weight="1"
            />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_radio_button_after"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="12dp"

        android:layout_marginTop="10dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintTop_toBottomOf="@+id/ll_radio_button_on"
        >

        <RadioButton
            android:id="@+id/radio_button_after"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:buttonTint="@color/radio_button_bottom_sheet_color"
            android:textColor="@color/darkBlue"
            android:text="@string/after"
            android:layout_weight="0.036"
            />

        <EditText
            android:id="@+id/editTextAfterSelected"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="true"
            android:background="@drawable/edit_text_background"
            android:gravity="center"
            android:inputType="number"
            android:hint="@string/_1"
            android:text="@string/_1"
            android:textColor="@color/darkBlue"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_weight="0.09"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/occurrences"
            android:textColor="@color/darkBlue"
            android:textSize="18sp"
            android:layout_marginStart="12dp"
            android:layout_weight="0.1"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_button_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_radio_button_after"
        >
        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonSave_bottomSheet"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cornerRadius="10dp"
            android:textSize="18sp"
            android:text="@string/save_task"
            android:backgroundTint="@color/darkGreen"
            android:layout_weight="1"
            android:layout_marginEnd="10dp"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/done_button_bottomSheet"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:backgroundTint="@color/darkGreen"
            app:cornerRadius="10dp"
            android:text="@string/done"
            android:textSize="18sp"
            android:layout_weight="1"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@+id/ll_button_bottom_sheet"
        />


</androidx.constraintlayout.widget.ConstraintLayout>